Fix background colour contrast and padding
I fixed also font size

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ img {
 }
 
 .bookname {
-  background-color: #000;
+  background-color: #222;
   background-image: url("../images/anchors.svg");
   color: #fff;
   font-size: 1.125rem;
@@ -55,7 +55,7 @@ article div {
   background-image: none;
   border-radius: 0 0 6px 6px;
   color: #fff;
-  padding: 1rem;
+  padding: .9rem .95rem 1rem;
   font-size: 1.75rem;
 }
 
@@ -71,12 +71,15 @@ h2 {
   color: #fff;
   font-weight: normal;
   font-style: normal;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 h3 {
   padding: 0;
   margin: 0;
+  font-style: normal;
+  font-size: 1em;
+  line-height: 1.55em;
 }
 
 nav ul {
@@ -164,7 +167,7 @@ footer {
   display: flex;
   justify-content: center;
   padding: 1rem;
-  background-color: #000;
+  background-color: #222;
   background-image: url("../images/anchors.svg");
   color: #fff;
 }
